# GenAI

./: .dockerignore  .gitignore  LICENSE  README.md  requirements.txt  setup.py
API Integration/: rest-api-calls.ipynb
Agentic RAG/: use-case-1.ipynb
LLM Evaluation/: llm-evaluations.ipynb
LLM FineTuning/: Fine-Tuning a Pre-Trained Model-Mistral.ipynb
LLM Memory/: memory-llm.ipynb
LangServe/: Dockerfile  README.md  pyproject.toml
LangServe/app/: server.py
Langchain Basics/: try-1.ipynb  try-10.ipynb  try-2.ipynb  try-3.ipynb  try-4.ipynb  try-5.ipynb  try-6.ipynb  try-7.ipynb  try-8.ipynb  try-9.ipynb
Multi Modality/: vision-model.ipynb
Multi-Agents/: agents.py  job_description_example.md  main.py  requirements.txt  tasks.py  user-prompts.txt
Observability/: llmops-langsmith.ipynb
Ollama/: CaseStudy-Ollama-1.ipynb  try-1.ipynb
RAG/: casestudy-1.ipynb  hr-rag-ui.py  pre-processing.py  rag-basics-1.ipynb  rag-basics-2.ipynb  rag-basics-3.ipynb  test-preprocessing.py
RAG/data/: good.txt  when.txt  work.txt
UseCase/: chinook.db  use-case-1.ipynb  use-case-2.py
Vision RAG/: ColPali-Vision-based-RAG-V2.ipynb
Voice To Voice/: app.py  chatbot_function.py  requirements.txt
docs/: Instructions.txt  conf.py
graph-rag/: README.md
graph-rag/advanced-neo4j/: Dockerfile  README.md  app.py  build.sh  constants.py  document_processor.py  graph_database.py  graph_manager.py  logger.py  print_pkl_file.py  query_handler.py  requirements.txt  start.sh
graph-rag/simple-inmemory/: README.md  app.py  constants.py  requirements.txt
(+5 files in other folders)
